--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,12 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+        ],
+        "files": [
+            "app/Helpers/Shorthand.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
