--- a/package.json
+++ b/package.json
@@ -10,35 +10,33 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^1.6.5",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.4",
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "copy-files-from-to": "^3.2.0",
-        "popper.js": "^1.12",
-        "cross-env": "^5.1",
-        "vue": "^2.5.7",
-        "vue-loader": "^15.9.5",
-        "vue-template-compiler": "^2.6.14",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "resolve-url-loader": "^4.0.0",
-        "dompurify": "^3.0.5",
-        "@johmun\/vue-tags-input": "^2.1.0",
-        "@tinymce\/tinymce-vue": "^3",
+        "@johmun/vue-tags-input": "^2.1.0",
+        "@tinymce/tinymce-vue": "^3",
         "body-scroll-lock": "^4.0.0-beta.0",
         "chart.js": "^2.8.0",
+        "copy-files-from-to": "^3.2.0",
+        "cross-env": "^5.1",
+        "dompurify": "^3.0.5",
         "firebase": "^8.4.2",
         "jspdf": "^2.3.1",
         "jspdf-autotable": "^3.5.14",
         "luxon": "^1.25.0",
         "material-icons": "^0.3.1",
-        "moment": "^2.29.1",
+        "moment": "^2.30.1",
+        "popper.js": "^1.12",
         "prismjs": "^1.17.1",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
         "tinymce": "^5.7.1",
         "uuid": "^8.3.2",
+        "vue": "^2.5.7",
         "vue-chartjs": "^3.4.2",
         "vue-color": "^2.7.1",
         "vue-datetime": "^1.0.0-beta.14",
@@ -46,9 +44,11 @@
         "vue-gtag": "^1.16.1",
         "vue-i18n": "^8.22.4",
         "vue-json-excel": "^0.3.0",
+        "vue-loader": "^15.9.5",
         "vue-prism-editor": "^1.2.2",
         "vue-router": "^3.1.3",
-        "vue2-editor": "^2.10.2",
+        "vue-template-compiler": "^2.6.14",
+        "vue2-editor": "^1.0.1",
         "vuedraggable": "^2.24.3",
         "vuelidate": "^0.7.6",
         "vuesax": "^3.12.2",
