--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "sass-loader": "^11.0.1",
         "tinymce": "^5.7.1",
         "uuid": "^8.3.2",
+        "v-calendar": "^2.4.2",
         "vue": "^2.5.7",
         "vue-chartjs": "^3.4.2",
         "vue-color": "^2.7.1",
